View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030690 | Open CASCADE | OCCT:DRAW | public | 2019-05-03 09:36 | 2019-09-04 17:06 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | feature | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030690: Draw Harness - provide XDisplay command for displaying XDE document | ||||
Description | Existing command XShow relies on TPrsStd, which does not fit well into ViewerTest, because created presentations are not registered as objects in ViewerTest, hence command like vdisplay/vremove/vstate are not working as expected. It is suggesting adding a new command XDisplay similar to vdisplay which would create a normal AIS objects (e.g. XCAFPrs_AISObject) and register them within ViewerTest map. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR30690 has been created by kgv. SHA-1: 8a8956ab295518e9a29995c2e27fbd7e0e49b173 Detailed log of new commits: Author: kgv Date: Fri May 3 12:30:02 2019 +0300 0030690: Draw Harness - provide XDisplay command for displaying XDE document XDisplay - added new command displaying XDE document in ViewerTest map of object: > XDisplay Doc [label1 [label2 [...]]] [-explore {on|off}] [-docPrefix {on|off}] [-names {on|off}] > [-noupdate] [-dispMode Mode] [-highMode Mode] vstate - added NULL checks. vdisplay now prints error on attempt to specify unsupported display mode. verase, vremove now raise Tcl exception on attempt to hide non-existing object. verase, vremove, vdir now accept name masks like "verase b*". vremove and vdir output is now consistent to verase command (space-separated list of removed objects). |
|
Branch CR30690 has been updated forcibly by kgv. SHA-1: f5c31850f347fe83c7d79a5b7d8794c2004d187d |
|
Branch CR30690 has been updated forcibly by kgv. SHA-1: 050d7872a7476aec536292fb64c9e169b32e4246 |
|
Branch CR30690 has been updated forcibly by kgv. SHA-1: 24b57afd21dd85ed79ae52996ef048b305ecfa1f |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30690-master-KGV/ |
|
Branch CR30690 has been updated forcibly by kgv. SHA-1: cbc71ac8c3cd136a2ebf9e07c522f92f922b50ab |
|
Branch CR30690 has been updated forcibly by kgv. SHA-1: 910910a0757167f5af5fdc5601a2993d05594806 |
|
Branch CR30690 has been updated forcibly by kgv. SHA-1: 66ea6bc523c1191b58baa2e4a274fd17dbc80fdd |
|
Reviewed without remarks |
|
Branch CR30690 has been updated forcibly by kgv. SHA-1: f7dc7d8b6d4adfa631facfdcd0bdf14e4fd0d8d7 |
|
Fix has been tested in framework of WEEK-20 branch Combination - OCCT branch : WEEK-20 master SHA - 853af31fb14e2140d821c7ba1c5c5977072d7662 d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : WEEK-20 SHA - bde66da19002bfd6a68440a079d00728c5796b30 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16362.230000000052 / 16346.709999999983 [+0.09%] Products Total CPU difference: 10506.300000000043 / 10516.200000000064 [-0.09%] Windows-64-VC14: OCCT Total CPU difference: 17708.015625 / 17692.25 [+0.09%] Products Total CPU difference: 12195.578125 / 12107.796875 [+0.72%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30690 has been deleted by inv. SHA-1: f7dc7d8b6d4adfa631facfdcd0bdf14e4fd0d8d7 |
occt: master ab1f4580 2019-05-03 09:30:02 Committer: bugmaster Details Diff |
0030690: Draw Harness - provide XDisplay command for displaying XDE document XDisplay - added new command displaying XDE document in ViewerTest map of object: > XDisplay Doc [label1 [label2 [...]]] [-explore {on|off}] [-docPrefix {on|off}] [-names {on|off}] > [-noupdate] [-dispMode Mode] [-highMode Mode] vstate - added NULL checks. vdisplay now prints error on attempt to specify unsupported display mode. verase, vremove now raise Tcl exception on attempt to hide non-existing object. verase, vremove, vdir now accept name masks like "verase b*". vremove and vdir output is now consistent to verase command (space-separated list of removed objects). |
Affected Issues 0030690 |
|
mod - src/ViewerTest/ViewerTest.cxx | Diff File | ||
mod - src/XDEDRAW/XDEDRAW.cxx | Diff File | ||
mod - tests/bugs/vis/bug27751_capping | Diff File | ||
mod - tests/v3d/dimensions/identic | Diff File | ||
mod - tests/v3d/glsl/clipping1 | Diff File | ||
mod - tests/v3d/glsl/distinguish_off | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-05-03 09:36 | kgv | New Issue | |
2019-05-03 09:36 | kgv | Assigned To | => kgv |
2019-05-03 12:37 | git | Note Added: 0084109 | |
2019-05-03 13:15 | git | Note Added: 0084110 | |
2019-05-03 16:23 | git | Note Added: 0084113 | |
2019-05-03 16:43 | git | Note Added: 0084114 | |
2019-05-03 16:57 | kgv | Relationship added | related to 0025381 |
2019-05-03 17:45 | kgv | Note Added: 0084115 | |
2019-05-03 17:45 | kgv | Assigned To | kgv => san |
2019-05-03 17:45 | kgv | Status | new => resolved |
2019-05-03 17:46 | git | Note Added: 0084116 | |
2019-05-05 00:23 | git | Note Added: 0084142 | |
2019-05-05 00:42 | git | Note Added: 0084143 | |
2019-05-07 09:17 | kgv | Assigned To | san => osa |
2019-05-08 10:12 | osa | Note Added: 0084236 | |
2019-05-08 10:12 | osa | Assigned To | osa => bugmaster |
2019-05-08 10:12 | osa | Status | resolved => reviewed |
2019-05-09 15:56 | git | Note Added: 0084273 | |
2019-05-15 12:00 | bugmaster | Note Added: 0084360 | |
2019-05-15 12:00 | bugmaster | Status | reviewed => tested |
2019-05-15 12:01 | bugmaster | Test case number | => Not required |
2019-05-19 10:40 | bugmaster | Changeset attached | => occt master ab1f4580 |
2019-05-19 10:40 | bugmaster | Status | tested => verified |
2019-05-19 10:40 | bugmaster | Resolution | open => fixed |
2019-05-19 10:53 | git | Note Added: 0084449 |